# template2instance

./: .gitignore  README.md  pyproject.toml
scripts/: create.py
template2instance/: __init__.py  open_source_license_management.py  template2instance.py
