[tool.poetry]
name = "template2instance"
version = "0.1.0"
description = ""
authors = ["Manuel YGUEL <manuel.yguel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
bs4 = "^0.0.2"
semver = "^3.0.2"
typeguard = "^4.3.0"
path = "^17.0.0"


[tool.poetry.group.scripts.dependencies]
click = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
create = "scripts.create:main"